# MinecraftPe-Launcher

./: README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GameFun.cpp  Launcher.cpp  Launcher.h
app/src/main/cpp/include/: android_log.h
app/src/main/java/com/mojang/minecraftpe/: BatteryMonitor.java  CrashManager.java  MainActivity.java  NotificationListenerService.java  ThermalMonitor.java
app/src/main/java/com/mojang/minecraftpe/store/amazonappstore/: AmazonAppStore.java
app/src/main/java/com/mojang/minecraftpe/store/googleplay/: GooglePlayStore.java
app/src/main/java/com/wglink/minecraftpe/: JNICallResult.java
app/src/main/java/com/wglink/minecraftpe/activity/: LauncherActivity.java  MinecraftActivity.java
app/src/main/java/com/wglink/minecraftpe/launcher/: App.java
app/src/main/java/com/wglink/minecraftpe/util/: NotchScreenUtil.java  Patcher.java  SoLibraryLoader.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
